--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lint-tools": "yarn eslint --rule no-console:off cypress tools",
     "precommit": "yarn lint && yarn test",
     "serve": "yarn serve-share-conway",
-    "serve-cosmos": "cosmos --config .cosmos.config.json",
+    "serve-cosmos": "yarn build-cosmos && cosmos --config .cosmos.config.json",
     "serve-share-conway": "run-script-os",
     "serve-share-conway:win32": "yarn build-share-conway && set USE_WEBIFC_SHIM=true&& node tools/esbuild/serve.js",
     "serve-share-conway:linux:darwin": "yarn build-share-conway && USE_WEBIFC_SHIM=true node tools/esbuild/serve.js",
