--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.839",
+  "version": "1.0.804",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -59,6 +59,7 @@
     "@octokit/rest": "^19.0.3",
     "@sentry/react": "^7.61.0",
     "@sentry/tracing": "^7.61.0",
+    "axios": "^1.6.7",
     "clsx": "^1.2.1",
     "cypress-react-router": "^2.0.1",
     "js-cookie": "^3.0.5",
@@ -81,7 +82,7 @@
     "three": "^0.135",
     "typescript": "^4.8.4",
     "use-double-tap": "^1.3.4",
-    "web-ifc-viewer": "^1.0.209",
+    "web-ifc-viewer": "./web-ifc-viewer-1.0.209-bldrs-1.tgz",
     "web-vitals": "^2.1.0",
     "zustand": "^4.0.0"
   },
