--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "serve-share-webifc": "run-script-os",
     "serve-share-webifc:win32": "yarn build-share-webifc && set USE_WEBIFC_SHIM=false&& node tools/esbuild/serve.js",
     "serve-share-webifc:linux:darwin": "yarn build-share-webifc && USE_WEBIFC_SHIM=false node tools/esbuild/serve.js",
-    "test": "jest --config tools/jest/jest.config.js",
+    "test": "yarn test-src && yarn test-tools",
+    "test-src": "jest --config tools/jest/jest.config.js",
+    "test-tools": "yarn node --experimental-vm-modules $(yarn bin jest) --config tools/jest/jest-tools.config.js",
     "update-version": "./scripts/updateVersion.mjs"
   },
   "dependencies": {
