--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build-share-webifc:linux:darwin": "USE_WEBIFC_SHIM=false yarn build-share && yarn build-share-copy-wasm-webifc",
     "build-share-copy-wasm-webifc": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
     "build-share-copy-wasm-conway": "shx cp node_modules/@bldrs-ai/conway/compiled/dependencies/conway-geom/Dist/*.wasm docs/static/js",
+    "build-share-analyze": "ANALYZE=true node tools/esbuild/build.js",
     "clean": "shx rm -rf docs",
     "cypress:open": "cypress run",
     "cypress-spec": "cypress run --spec",
@@ -42,7 +43,7 @@
     "serve-share-webifc:linux:darwin": "yarn build-share-webifc && USE_WEBIFC_SHIM=false node tools/esbuild/serve.js",
     "test": "yarn test-src && yarn test-tools",
     "test-src": "jest --config tools/jest/jest.config.js",
-    "test-tools": "yarn node --experimental-vm-modules $(yarn bin jest) --config tools/jest/jest-tools.config.js",
+    "test-tools": "NO_LOG=true yarn node --experimental-vm-modules $(yarn bin jest) --config tools/jest/jest-tools.config.js",
     "update-version": "./scripts/updateVersion.mjs"
   },
   "dependencies": {
