--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.896",
+  "version": "1.0.901",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -41,7 +41,7 @@
     "serve-share-webifc": "run-script-os",
     "serve-share-webifc:win32": "yarn build-share-webifc && set USE_WEBIFC_SHIM=false&& node tools/esbuild/serve.js",
     "serve-share-webifc:linux:darwin": "yarn build-share-webifc && USE_WEBIFC_SHIM=false node tools/esbuild/serve.js",
-    "test": "yarn test-src && yarn test-tools",
+    "test": "yarn test-tools && yarn test-src",
     "test-src": "jest --config tools/jest/jest.config.js",
     "test-tools": "NO_LOG=true yarn node --experimental-vm-modules $(yarn bin jest) --config tools/jest/jest-tools.config.js",
     "update-version": "./scripts/updateVersion.mjs"
