--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.913",
+  "version": "1.0.917",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -47,19 +47,19 @@
     "update-version": "./scripts/updateVersion.mjs"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.0.0",
+    "@auth0/auth0-react": "^2.2.4",
     "@babel/core": "^7.18.10",
-    "@bldrs-ai/conway": "./bldrs-ai-conway-0.1.425.tgz",
+    "@bldrs-ai/conway": "file:./bldrs-ai-conway-0.1.444.tgz",
     "@bldrs-ai/ifclib": "^5.3.3",
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@iconscout/react-unicons": "^2.0.0",
-    "@mui/icons-material": "^5.11.9",
-    "@mui/lab": "^5.0.0-alpha.95",
-    "@mui/material": "^5.9.2",
-    "@mui/styled-engine": "^5.8.7",
-    "@mui/styles": "^5.11.13",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^5.0.0-alpha.165",
+    "@mui/material": "^5.15.10",
+    "@mui/styled-engine": "^5.15.9",
+    "@mui/styles": "^5.15.10",
     "@octokit/rest": "^19.0.3",
+    "@react-three/fiber": "^8.15.16",
     "@sentry/react": "^7.61.0",
     "@sentry/tracing": "^7.61.0",
     "axios": "^1.6.7",
@@ -69,7 +69,6 @@
     "material-ui-popup-state": "^5.0.4",
     "matrix-widget-api": "^1.1.1",
     "normalize.css": "^8.0.1",
-    "postprocessing": "^6.29.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cosmos-plugin-webpack": "^6.0.0-beta.6",
@@ -82,60 +81,58 @@
     "react-router-dom": "^6.3.0",
     "react-swipeable": "^7.0.1",
     "remark-gfm": "^3.0.1",
-    "three": "^0.135",
+    "three": "^0.161.0",
     "typescript": "^4.8.4",
     "use-double-tap": "^1.3.4",
-    "web-ifc-viewer": "./web-ifc-viewer-1.0.209-bldrs-1.tgz",
+    "web-ifc": "^0.0.51",
     "web-vitals": "^2.1.0",
     "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@alex_neo/jest-expect-message": "^1.0.5",
-    "@babel/eslint-parser": "^7.18.9",
-    "@babel/plugin-syntax-import-assertions": "^7.18.6",
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-react": "^7.18.6",
-    "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
-    "@mui/types": "^7.2.3",
+    "@babel/eslint-parser": "^7.23.10",
+    "@babel/plugin-syntax-import-assertions": "^7.23.3",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "@mui/types": "^7.2.13",
     "@pablo-mayrgundter/cookies.js": "^1.0.0",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/cypress": "^10.0.1",
-    "@testing-library/dom": "^8.19.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@tsconfig/recommended": "^1.0.1",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@types/three": "^0.146.0",
-    "babel-jest": "^28.1.3",
-    "babel-loader": "^8.2.5",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@tsconfig/recommended": "^1.0.3",
+    "@types/react": "^18.2.19",
+    "@types/react-dom": "^18.2.19",
+    "@types/three": "^0.161.2",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
     "canvas": "^2.11.0",
-    "cypress": "^13.2.0",
+    "cypress": "^13.6.4",
     "cypress-real-events": "^1.10.3",
-    "esbuild": "0.19.5",
-    "esbuild-clean-plugin": "^1.0.0",
+    "esbuild": "0.20.0",
     "esbuild-copy-static-files": "^0.1.0",
     "esbuild-plugin-progress": "^1.0.1",
-    "esbuild-plugin-svgr": "^2.0.0",
-    "eslint": "^8.22.0",
+    "esbuild-plugin-svgr": "^2.1.0",
+    "eslint": "^8.56.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest-dom": "^4.0.3",
-    "eslint-plugin-jsdoc": "^39.3.6",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-jsdoc": "^48.1.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.9.1",
+    "eslint-plugin-testing-library": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "jsdom": "^20.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
     "msw": "^0.47.4",
     "react-cosmos": "^6.0.0-beta.6",
     "run-script-os": "^1.1.6",
