--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.917",
+  "version": "1.0.919",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -59,6 +59,7 @@
     "@mui/styled-engine": "^5.15.9",
     "@mui/styles": "^5.15.10",
     "@octokit/rest": "^19.0.3",
+    "@react-three/drei": "^9.97.6",
     "@react-three/fiber": "^8.15.16",
     "@sentry/react": "^7.61.0",
     "@sentry/tracing": "^7.61.0",
@@ -70,6 +71,7 @@
     "matrix-widget-api": "^1.1.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
+    "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-cosmos-plugin-webpack": "^6.0.0-beta.6",
     "react-dom": "^18.2.0",
@@ -110,7 +112,6 @@
     "@types/three": "^0.161.2",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
-    "canvas": "^2.11.0",
     "cypress": "^13.6.4",
     "cypress-real-events": "^1.10.3",
     "esbuild": "0.20.0",
