* update end to end tests

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -15,6 +15,12 @@ jobs:
   install-cypress-webifc:
     runs-on: ubuntu-22.04-4vcpu-16gb
     steps:
+      - name: Set up Node.js 16
+        id: setup-node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
       - name: checkout
         id: checkout
         uses: actions/checkout@v3
@@ -27,10 +33,9 @@ jobs:
           build: yarn build-share-webifc
 
       - name: Save build artifacts
-        id: build-artifacts
+        id: build-artifacts-webifc
         uses: actions/upload-artifact@v3
         with:
-          node-version: 16
           name: build-webifc-${{ github.sha }}
           if-no-files-found: error
           path: docs/
@@ -39,23 +44,27 @@ jobs:
     runs-on: ubuntu-22.04-4vcpu-16gb
     needs: install-cypress-webifc
     steps:
+      - name: Set up Node.js 16
+        id: setup-node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
       - name: checkout
         id: checkout
         uses: actions/checkout@v3
 
       - name: Restore build artifacts
-        id: restore-artifacts
+        id: restore-artifacts-webifc
         uses: actions/download-artifact@v3
         with:
-          node-version: 16
           name: build-webifc-${{ github.sha }}
           path: docs/
 
       - name: E2E Tests on Google Chrome
-        id: e2e-on-google-chrome
+        id: e2e-on-google-chrome-webifc
         uses: cypress-io/github-action@v6
         with:
-          node-version: 16
           browser: chrome
           start: yarn serve-share-webifc
 
@@ -63,6 +72,12 @@ jobs:
     runs-on: ubuntu-22.04-4vcpu-16gb
     needs: run-cypress-on-linux-webifc
     steps:
+      - name: Set up Node.js 16
+        id: setup-node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
       - name: checkout
         id: checkout
         uses: actions/checkout@v3
@@ -75,7 +90,7 @@ jobs:
           build: yarn build-share-conway
 
       - name: Save build artifacts
-        id: build-artifacts
+        id: build-artifacts-conway
         uses: actions/upload-artifact@v3
         with:
           name: build-conway-${{ github.sha }}
@@ -86,21 +101,26 @@ jobs:
     runs-on: ubuntu-22.04-4vcpu-16gb
     needs: install-cypress-conway
     steps:
+      - name: Set up Node.js 16
+        id: setup-node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
       - name: checkout
         id: checkout
         uses: actions/checkout@v3
 
       - name: Restore build artifacts
-        id: restore-artifacts
+        id: restore-artifacts-conway
         uses: actions/download-artifact@v3
         with:
           name: build-conway-${{ github.sha }}
           path: docs/
 
       - name: E2E Tests on Google Chrome
-        id: e2e-on-google-chrome
+        id: e2e-on-google-chrome-conway
         uses: cypress-io/github-action@v6
         with:
-          node-version: 16
           browser: chrome
           start: yarn serve-share-conway
