--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.901",
+  "version": "1.0.904",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -66,6 +66,7 @@
     "@svgr/plugin-jsx": "^8.1.0",
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.6.7",
+    "babel-loader": "^8.2.5",
     "clsx": "^1.2.1",
     "cypress-react-router": "^2.0.1",
     "esbuild": "0.19.5",
@@ -73,6 +74,7 @@
     "esbuild-copy-static-files": "^0.1.0",
     "esbuild-plugin-progress": "^1.0.1",
     "esbuild-plugin-svgr": "^2.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "js-cookie": "^3.0.5",
     "material-ui-popup-state": "^5.0.4",
     "matrix-widget-api": "^1.1.1",
@@ -81,6 +83,7 @@
     "postprocessing": "^6.29.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cosmos": "^6.0.0-beta.6",
     "react-cosmos-plugin-webpack": "^6.0.0-beta.6",
     "react-dom": "^18.2.0",
     "react-feature-flags": "^1.0.0",
@@ -98,6 +101,7 @@
     "use-double-tap": "^1.3.4",
     "web-ifc-viewer": "./web-ifc-viewer-1.0.209-bldrs-1.tgz",
     "web-vitals": "^2.1.0",
+    "webpack": "^5.75.0",
     "zustand": "^4.0.0"
   },
   "devDependencies": {
@@ -119,7 +123,6 @@
     "@types/react-dom": "^18.0.9",
     "@types/three": "^0.146.0",
     "babel-jest": "^28.1.3",
-    "babel-loader": "^8.2.5",
     "cypress": "^13.2.0",
     "cypress-real-events": "^1.10.3",
     "eslint": "^8.22.0",
@@ -132,14 +135,11 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.9.1",
-    "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "jsdom": "^20.0.3",
-    "react-cosmos": "^6.0.0-beta.6",
-    "webpack": "^5.75.0"
+    "jsdom": "^20.0.3"
   },
   "msw": {
     "workerDirectory": "public"
