* Update GitHub Action add environment cypress + add GH_BASE_URL environment variable

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   install-cypress-webifc:
+    environment: cypress
     runs-on: ubuntu-22.04-4vcpu-16gb
     steps:
       - name: checkout
@@ -35,6 +36,7 @@ jobs:
           path: docs/
 
   run-cypress-on-linux-webifc:
+    environment: cypress
     runs-on: ubuntu-22.04-4vcpu-16gb
     needs: install-cypress-webifc
     steps:
@@ -57,6 +59,7 @@ jobs:
           start: yarn serve-share-webifc
 
   install-cypress-conway:
+    environment: cypress
     runs-on: ubuntu-22.04-4vcpu-16gb
     needs: run-cypress-on-linux-webifc
     steps:
@@ -80,6 +83,7 @@ jobs:
           path: docs/
 
   run-cypress-on-linux-conway:
+    environment: cypress
     runs-on: ubuntu-22.04-4vcpu-16gb
     needs: install-cypress-conway
     steps:
