--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -109,6 +109,6 @@ jobs:
           browser: chrome
           start: yarn serve-share-conway
           record: true
-          key: ${{ secrets.CYPRESS_RECORD_KEY }}
         env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
