New branch to test different GHA version scripts.  First, set env vars globally

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -11,6 +11,11 @@ on:
 
   workflow_dispatch:
 
+env:
+  CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
+  CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   install-cypress-webifc:
     environment: cypress
@@ -58,9 +63,6 @@ jobs:
           browser: chrome
           start: yarn serve-share-webifc
           record: true
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   install-cypress-conway:
     environment: cypress
@@ -109,6 +111,3 @@ jobs:
           browser: chrome
           start: yarn serve-share-conway
           record: true
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
