--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -57,7 +57,8 @@ jobs:
         with:
           browser: chrome
           start: yarn serve-share-webifc
-          record: true
+          record: false
+          headed: true
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -108,7 +109,8 @@ jobs:
         with:
           browser: chrome
           start: yarn serve-share-conway
-          record: true
+          record: false
+          headed: true
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
