test non headed

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -58,7 +58,7 @@ jobs:
           browser: chrome
           start: yarn serve-share-webifc
           record: false
-          headed: true
+          headed: false
           browser: firefox
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
