--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -17,18 +17,15 @@ jobs:
     runs-on: ubuntu-22.04-4vcpu-16gb
     steps:
       - name: checkout
-        id: checkout
         uses: actions/checkout@v3
 
       - name: Install Cypress WebIfc
-        id: install-cypress-webifc
         uses: cypress-io/github-action@v5
         with:
           runTests: false
           build: yarn build-share-webifc
 
       - name: Save build artifacts
-        id: build-artifacts
         uses: actions/upload-artifact@v3
         with:
           name: build-webifc-${{ github.sha }}
@@ -41,39 +38,38 @@ jobs:
     needs: install-cypress-webifc
     steps:
       - name: checkout
-        id: checkout
         uses: actions/checkout@v3
 
       - name: Restore build artifacts
-        id: restore-artifacts
         uses: actions/download-artifact@v3
         with:
           name: build-webifc-${{ github.sha }}
           path: docs/
 
       - name: E2E Tests on Google Chrome
-        id: e2e-on-google-chrome
         uses: cypress-io/github-action@v5
         with:
           browser: chrome
           start: yarn serve-share-webifc
           record: false
-          headed: true
+          headed: false
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        uses: actions/upload-artifact@v4
-        # add the line below to store screenshots only on failures
-        # if: failure()
+          
+      - name: Upload Cypress Screenshots
+        uses: actions/upload-artifact@v3
         with:
-          name: cypress-screenshots
+          name: webifc-cypress-screenshots
           path: cypress/screenshots
-          if-no-files-found: warn # 'warn' or 'error' are also available, defaults to `warn`
-        uses: actions/upload-artifact@v4
+          if-no-files-found: ignore
+
+      - name: Upload Cypress Videos
+        uses: actions/upload-artifact@v3
         with:
-          name: cypress-videos
+          name: webifc-cypress-videos
           path: cypress/videos
-          if-no-files-found: warn # 'warn' or 'error' are also available, defaults to `warn`
+          if-no-files-found: ignore
 
   install-cypress-conway:
     environment: cypress
@@ -81,18 +77,15 @@ jobs:
     needs: run-cypress-on-linux-webifc
     steps:
       - name: checkout
-        id: checkout
         uses: actions/checkout@v3
 
       - name: Install Cypress Conway
-        id: install-cypress-conway
         uses: cypress-io/github-action@v5
         with:
           runTests: false
           build: yarn build-share-conway
 
       - name: Save build artifacts
-        id: build-artifacts
         uses: actions/upload-artifact@v3
         with:
           name: build-conway-${{ github.sha }}
@@ -105,18 +98,15 @@ jobs:
     needs: install-cypress-conway
     steps:
       - name: checkout
-        id: checkout
         uses: actions/checkout@v3
 
       - name: Restore build artifacts
-        id: restore-artifacts
         uses: actions/download-artifact@v3
         with:
           name: build-conway-${{ github.sha }}
           path: docs/
 
       - name: E2E Tests on Google Chrome
-        id: e2e-on-google-chrome
         uses: cypress-io/github-action@v5
         with:
           browser: chrome
@@ -126,3 +116,17 @@ jobs:
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Upload Cypress Screenshots
+        uses: actions/upload-artifact@v3
+        with:
+          name: conway-cypress-screenshots
+          path: cypress/screenshots
+          if-no-files-found: ignore
+
+      - name: Upload Cypress Videos
+        uses: actions/upload-artifact@v3
+        with:
+          name: conway-cypress-videos
+          path: cypress/videos
+          if-no-files-found: ignore
