--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.956",
+  "version": "1.0.957",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -30,7 +30,8 @@
     "deps-graph": "npx dependency-cruiser src --include-only 'jsx?' --config --output-type dot | dot -T svg > deps.svg",
     "husky-init": "husky install",
     "lint": "yarn lint-src && yarn lint-tools",
-    "lint-src": "yarn eslint src && tsc -p tools/tsconfig.json",
+    "lint-src": "yarn eslint src && yarn typecheck",
+    "typecheck": "tsc -p tools/tsconfig.json",
     "lint-tools": "yarn eslint cypress tools",
     "precommit": "yarn lint && yarn test",
     "serve": "yarn serve-share-conway",
