--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -59,7 +59,7 @@ jobs:
           
       - name: Upload Cypress Screenshots
         uses: actions/upload-artifact@v3
-        #if: failure()
+        if: failure()
         with:
           name: webifc-cypress-screenshots
           path: cypress/screenshots
@@ -67,7 +67,7 @@ jobs:
 
       - name: Upload Cypress Videos
         uses: actions/upload-artifact@v3
-        #if: failure()
+        if: failure()
         with:
           name: webifc-cypress-videos
           path: cypress/videos
