--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.968",
+  "version": "1.0.970",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -73,6 +73,7 @@
     "babel-loader": "8.3.0",
     "clsx": "1.2.1",
     "cypress-react-router": "2.0.1",
+    "cypress-terminal-report": "^6.0.1",
     "esbuild": "0.19.5",
     "esbuild-clean-plugin": "1.0.0",
     "esbuild-copy-static-files": "0.1.0",
