--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.930",
+  "version": "1.0.933",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -20,7 +20,6 @@
     "build-share-webifc:win32": "set USE_WEBIFC_SHIM=false&& yarn build-share && yarn build-share-copy-wasm-webifc",
     "build-share-webifc:linux:darwin": "USE_WEBIFC_SHIM=false yarn build-share && yarn build-share-copy-wasm-webifc",
     "build-share-copy-wasm-webifc": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
-    "build-share-copy-wasm-conway": "shx cp node_modules/@bldrs-ai/conway/compiled/dependencies/conway-geom/Dist/*.wasm docs/static/js",
     "build-share-analyze": "ANALYZE=true node tools/esbuild/build.js",
     "clean": "shx rm -rf docs",
     "cypress": "cypress run",
@@ -110,9 +109,10 @@
   },
   "devDependencies": {
     "@alex_neo/jest-expect-message": "1.0.5",
-    "@bahmutov/cypress-esbuild-preprocessor": "2.1.3",
     "@mui/types": "7.2.3",
     "@pablo-mayrgundter/cookies.js": "1.1.0",
+    "@percy/cli": "^1.28.1",
+    "@percy/cypress": "^3.1.2",
     "@testing-library/cypress": "10.0.1",
     "@testing-library/dom": "8.19.1",
     "@testing-library/jest-dom": "5.16.5",
@@ -123,7 +123,7 @@
     "@types/react-dom": "18.0.9",
     "@types/three": "0.146.0",
     "babel-jest": "28.1.3",
-    "cypress": "13.2.0",
+    "cypress": "13.6.6",
     "cypress-real-events": "1.10.3",
     "eslint": "8.22.0",
     "eslint-config-google": "0.14.0",
