Test minimal e2e GHA

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -12,91 +12,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  install-cypress-webifc:
-    runs-on: ubuntu-22.04-4vcpu-16gb
+  cypress-run:
+    runs-on: ubuntu-22.04
     steps:
-      - name: checkout
-        id: checkout
-        uses: actions/checkout@v3
-
-      - name: Install Cypress WebIfc
-        id: install-cypress-webifc
+      - name: Checkout
+        uses: actions/checkout@v4
+      # Install npm dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Cypress run
         uses: cypress-io/github-action@v6
-        with:
-          runTests: false
-          build: yarn build-share-webifc
-
-      - name: Save build artifacts
-        id: build-artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-webifc-${{ github.sha }}
-          if-no-files-found: error
-          path: docs/
-
-  run-cypress-on-linux-webifc:
-    runs-on: ubuntu-22.04-4vcpu-16gb
-    needs: install-cypress-webifc
-    steps:
-      - name: checkout
-        id: checkout
-        uses: actions/checkout@v3
-
-      - name: Restore build artifacts
-        id: restore-artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build-webifc-${{ github.sha }}
-          path: docs/
-
-      - name: E2E Tests on Google Chrome
-        id: e2e-on-google-chrome
-        uses: cypress-io/github-action@v6
-        with:
-          browser: chrome
-          start: yarn serve-share-webifc
-
-  install-cypress-conway:
-    runs-on: ubuntu-22.04-4vcpu-16gb
-    needs: run-cypress-on-linux-webifc
-    steps:
-      - name: checkout
-        id: checkout
-        uses: actions/checkout@v3
-
-      - name: Install Cypress Conway
-        id: install-cypress-conway
-        uses: cypress-io/github-action@v6
-        with:
-          runTests: false
-          build: yarn build-share-conway
-
-      - name: Save build artifacts
-        id: build-artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-conway-${{ github.sha }}
-          if-no-files-found: error
-          path: docs/
-
-  run-cypress-on-linux-conway:
-    runs-on: ubuntu-22.04-4vcpu-16gb
-    needs: install-cypress-conway
-    steps:
-      - name: checkout
-        id: checkout
-        uses: actions/checkout@v3
-
-      - name: Restore build artifacts
-        id: restore-artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build-conway-${{ github.sha }}
-          path: docs/
-
-      - name: E2E Tests on Google Chrome
-        id: e2e-on-google-chrome
-        uses: cypress-io/github-action@v6
-        with:
-          browser: chrome
-          start: yarn serve-share-conway
