package.json: cypress-build command to disable opfs in cypress. opfs: more careful about setup and add esbuild test. e2e: view-1000 less boilerplate

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -27,7 +27,7 @@ jobs:
         run: yarn install
 
       - name: Build Project
-        run: yarn build
+        run: yarn cypress-build
         # Ensure your build script correctly outputs to the ./docs directory
         env:
           NODE_ENV: 'production'
