1031 initial model load and view (#1050)
* Checkpoint

* view-100 running locally

* lint to trigger build

* Checkpoint for GHA testing

* Checkpoint for GHA testing, cypress-io/github-action@v5 -> v6

* Checkpoint for GHA, now with build command to produce ./docs dir for cypress

* Fix HelpControl test API change to TooltipIconButton

* Code cleanup

* Checkpoint for GHA, disabling old gpu filters on linux

* GHA: remove test of old gpu filtering

* Checkpoint to see if simple screenshot diffing works

* screenshot diff

* screenshot: use timeout for model animation to settle

* Rename test cases for first time model load, logged-in and not.

* opfs: default isOpfsEnabled=true

* package.json: cypress-build command to disable opfs in cypress. opfs: more careful about setup and add esbuild test. e2e: view-1000 less boilerplate

* Remove percy

* view-100: remove waits in tests; CadView doesnt setModelReady until animation finished.  Add a binary diff setup for git

* view-100: further fixes on waitless tests

* view-100: relax camera animation rest threshold, trying to pass GHA

* view-100: back to using explicit wait, trying to pass GHA

* view-100: back to using explicit wait, 2, trying to pass GHA

* view-100: disable system theme in cypress tests

* view-100: more remove percy

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -12,91 +12,35 @@ on:
   workflow_dispatch:
 
 jobs:
-  install-cypress-webifc:
-    runs-on: ubuntu-22.04-4vcpu-16gb
+  cypress-run:
+    runs-on: ubuntu-22.04
     steps:
-      - name: checkout
-        id: checkout
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Install Cypress WebIfc
-        id: install-cypress-webifc
-        uses: cypress-io/github-action@v6
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          runTests: false
-          build: yarn build-share-webifc
+          node-version: '16' # Specify the Node.js version you need
 
-      - name: Save build artifacts
-        id: build-artifacts
-        uses: actions/upload-artifact@v3
+      - name: Install Dependencies
+        run: yarn install
+
+      - name: Build Project
+        run: yarn cypress-build
+        # Ensure your build script correctly outputs to the ./docs directory
+        env:
+          NODE_ENV: 'production'
+          AUTH0_DOMAIN: 'bldrs.us.auth0.com.msw'
+          GITHUB_BASE_URL: 'https://git.bldrs.dev.msw/p/gh'
+          OAUTH2_CLIENT_ID: 'msw'
+          OPFS_IS_ENABLED: 'false'
+          RAW_GIT_PROXY_URL: 'https://rawgit.bldrs.dev.msw/r'
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v5
         with:
-          name: build-webifc-${{ github.sha }}
-          if-no-files-found: error
-          path: docs/
-
-  run-cypress-on-linux-webifc:
-    runs-on: ubuntu-22.04-4vcpu-16gb
-    needs: install-cypress-webifc
-    steps:
-      - name: checkout
-        id: checkout
-        uses: actions/checkout@v3
-
-      - name: Restore build artifacts
-        id: restore-artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build-webifc-${{ github.sha }}
-          path: docs/
-
-      - name: E2E Tests on Google Chrome
-        id: e2e-on-google-chrome
-        uses: cypress-io/github-action@v6
-        with:
-          browser: chrome
-          start: yarn serve-share-webifc
-
-  install-cypress-conway:
-    runs-on: ubuntu-22.04-4vcpu-16gb
-    needs: run-cypress-on-linux-webifc
-    steps:
-      - name: checkout
-        id: checkout
-        uses: actions/checkout@v3
-
-      - name: Install Cypress Conway
-        id: install-cypress-conway
-        uses: cypress-io/github-action@v6
-        with:
-          runTests: false
-          build: yarn build-share-conway
-
-      - name: Save build artifacts
-        id: build-artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-conway-${{ github.sha }}
-          if-no-files-found: error
-          path: docs/
-
-  run-cypress-on-linux-conway:
-    runs-on: ubuntu-22.04-4vcpu-16gb
-    needs: install-cypress-conway
-    steps:
-      - name: checkout
-        id: checkout
-        uses: actions/checkout@v3
-
-      - name: Restore build artifacts
-        id: restore-artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: build-conway-${{ github.sha }}
-          path: docs/
-
-      - name: E2E Tests on Google Chrome
-        id: e2e-on-google-chrome
-        uses: cypress-io/github-action@v6
-        with:
-          browser: chrome
-          start: yarn serve-share-conway
+          browser: 'chrome'
+        env:
+          # Set any environment variables your build or tests may require
+          CI: true
