--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.930",
+  "version": "1.0.955",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -20,9 +20,9 @@
     "build-share-webifc:win32": "set USE_WEBIFC_SHIM=false&& yarn build-share && yarn build-share-copy-wasm-webifc",
     "build-share-webifc:linux:darwin": "USE_WEBIFC_SHIM=false yarn build-share && yarn build-share-copy-wasm-webifc",
     "build-share-copy-wasm-webifc": "shx cp node_modules/web-ifc/*.wasm docs/static/js",
-    "build-share-copy-wasm-conway": "shx cp node_modules/@bldrs-ai/conway/compiled/dependencies/conway-geom/Dist/*.wasm docs/static/js",
     "build-share-analyze": "ANALYZE=true node tools/esbuild/build.js",
     "clean": "shx rm -rf docs",
+    "cypress-build": "OPFS_IS_ENABLED=false THEME_IS_ENABLED=false yarn build",
     "cypress": "cypress run",
     "cypress-spec": "cypress run --spec",
     "cypress-headed": "cypress run --headed --browser chrome --no-exit",
@@ -110,7 +110,6 @@
   },
   "devDependencies": {
     "@alex_neo/jest-expect-message": "1.0.5",
-    "@bahmutov/cypress-esbuild-preprocessor": "2.1.3",
     "@mui/types": "7.2.3",
     "@pablo-mayrgundter/cookies.js": "1.1.0",
     "@testing-library/cypress": "10.0.1",
@@ -123,7 +122,7 @@
     "@types/react-dom": "18.0.9",
     "@types/three": "0.146.0",
     "babel-jest": "28.1.3",
-    "cypress": "13.2.0",
+    "cypress": "13.6.6",
     "cypress-real-events": "1.10.3",
     "eslint": "8.22.0",
     "eslint-config-google": "0.14.0",
