--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bldrs",
-  "version": "1.0.955",
+  "version": "1.0.986",
   "main": "src/index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/bldrs-ai/Share",
@@ -23,8 +23,8 @@
     "build-share-analyze": "ANALYZE=true node tools/esbuild/build.js",
     "clean": "shx rm -rf docs",
     "cypress-build": "OPFS_IS_ENABLED=false THEME_IS_ENABLED=false yarn build",
-    "cypress": "cypress run",
-    "cypress-spec": "cypress run --spec",
+    "cypress": "cypress run --browser chrome",
+    "cypress-spec": "cypress run --browser chrome --spec",
     "cypress-headed": "cypress run --headed --browser chrome --no-exit",
     "cypress-headed-spec": "cypress run --headed --browser chrome --no-exit --spec",
     "deps-graph": "npx dependency-cruiser src --include-only 'jsx?' --config --output-type dot | dot -T svg > deps.svg",
@@ -73,7 +73,6 @@
     "babel-loader": "8.3.0",
     "clsx": "1.2.1",
     "cypress-react-router": "2.0.1",
-    "cypress-terminal-report": "^6.0.1",
     "esbuild": "0.19.5",
     "esbuild-clean-plugin": "1.0.0",
     "esbuild-copy-static-files": "0.1.0",
@@ -123,7 +122,7 @@
     "@types/react-dom": "18.0.9",
     "@types/three": "0.146.0",
     "babel-jest": "28.1.3",
-    "cypress": "13.6.6",
+    "cypress": "13.2.0",
     "cypress-real-events": "1.10.3",
     "eslint": "8.22.0",
     "eslint-config-google": "0.14.0",
